fix focus jumping on linedit completion.

QWidget::setParent is supposed to let the focus unchanged within
the same window but this is not what happens in practice.

Makes hacking KCompletionBox::popup to suit our needs hardly possible.

Instead we'll use a new virtual providing the preferred global position
for the completion box.

showstopper
BUG: 152739

svn path=/trunk/KDE/kdelibs/; revision=746917